fixing overflow issue on TabView

--- a/src/components/Layout/TabView/TabView.scss
+++ b/src/components/Layout/TabView/TabView.scss
@@ -4,7 +4,7 @@
   background-color: $navy_2;
   font-family: $font-stack;
   height: fit-content;
-  overflow-y: hidden;
+  overflow: hidden;
   position: absolute;
   width: 100%;
   left: 0;
